--- a/Source/ZELNLauncher/ZELNLauncherWindow.ui
+++ b/Source/ZELNLauncher/ZELNLauncherWindow.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>602</width>
+    <width>600</width>
     <height>679</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>600</width>
+    <height>0</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>600</width>
+    <height>16777215</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Zinek Launcher</string>
