ADD: Selection Manager and Transform Manager Toolbars have been added. FIX: ZEDGizmo scale problems have been fixed. FIX: ZERayCast modifier bug has been fixed. ADD: ZEDelagete::CheckAndCall function has been added.
svn path=/branches/v0.6.5-Editor/; revision=1981

--- a/Source/ZEditor/ZEDSceneEditor/ZEDMainWindow.ui
+++ b/Source/ZEditor/ZEDSceneEditor/ZEDMainWindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainEditor</class>
- <widget class="QMainWindow" name="MainEditor">
+ <class>ZEDMainWindow</class>
+ <widget class="QMainWindow" name="ZEDMainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -743,7 +743,7 @@
   <connection>
    <sender>actExit</sender>
    <signal>triggered(bool)</signal>
-   <receiver>MainEditor</receiver>
+   <receiver>ZEDMainWindow</receiver>
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
