--- a/Source/ZEditor/ZEDCore/ZEDObjectBrowser.ui
+++ b/Source/ZEditor/ZEDCore/ZEDObjectBrowser.ui
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainBrowser</class>
- <widget class="QWidget" name="MainBrowser">
+ <class>ZEDObjectBrowser</class>
+ <widget class="QWidget" name="ZEDObjectBrowser">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>350</width>
+    <height>272</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Object Browser</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QLineEdit" name="ledtSearch"/>
+    <widget class="QLineEdit" name="txtSearch"/>
    </item>
    <item>
-    <widget class="QTreeWidget" name="treeBrowser">
+    <widget class="QTreeWidget" name="lstObjects">
      <property name="dragEnabled">
       <bool>true</bool>
      </property>
