ADD: Initial code of ZEDPropertyEditor has been added. CHG: Manager subfix from toolbar names have been removed. ADD: ZEDTransformEvent has been added.
svn path=/branches/v0.6.5-Editor/; revision=1996

--- a/Source/ZEditor/ZEDCore/ZEDSelectionToolbar.ui
+++ b/Source/ZEditor/ZEDCore/ZEDSelectionToolbar.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ZEDSelectionManagerToolbar</class>
- <widget class="QWidget" name="ZEDSelectionManagerToolbar">
+ <class>ZEDSelectionToolbar</class>
+ <widget class="QWidget" name="ZEDSelectionToolbar">
   <property name="geometry">
    <rect>
     <x>0</x>
