--- a/Source/ZELNLauncher/ZELNIntegrityWidget.ui
+++ b/Source/ZELNLauncher/ZELNIntegrityWidget.ui
@@ -68,7 +68,7 @@
           <widget class="QLabel" name="label_3">
            <property name="font">
             <font>
-             <pointsize>12</pointsize>
+             <pointsize>14</pointsize>
             </font>
            </property>
            <property name="text">
@@ -80,13 +80,16 @@
           <widget class="QLabel" name="lblStatus">
            <property name="font">
             <font>
-             <pointsize>12</pointsize>
+             <pointsize>14</pointsize>
              <weight>50</weight>
              <bold>false</bold>
             </font>
            </property>
            <property name="text">
             <string>Unknown</string>
+           </property>
+           <property name="textFormat">
+            <enum>Qt::RichText</enum>
            </property>
           </widget>
          </item>
